# ktoshiba

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Messages.sh  NEWS  README  README.MousePad  README.es  README.omnibook  README.toshiba_acpi  TODO  config-ktoshiba.h.cmake  configure.in.in
admin/: acinclude.m4.in  cvs.sh
cmake/: FindInput.cmake  FindLibMNL.cmake  FindLibUDev.cmake  FindLinuxIncludes.cmake
doc/: CMakeLists.txt  Makefile.am
doc/en/: Makefile.am  Makefile.in  index.docbook
doc/kcm_ktoshiba/: CMakeLists.txt  index.docbook
doc/ktoshiba/: CMakeLists.txt  index.docbook
fdi/: 30-keymap-toshiba.fdi
icons/: CMakeLists.txt  ktoshiba.svgz  sc-apps-ktoshiba.svgz
kcm/: CMakeLists.txt  bootorder.cpp  bootorder.h  bootorder.ui  bootsettings.cpp  bootsettings.h  bootsettings.ui  devicemodel.cpp  devicemodel.h  general.ui  generalsettings.cpp  generalsettings.h  hddprotect.ui  hddprotection.cpp  hddprotection.h  kcm_ktoshibam.desktop  keyboard.ui  keyboardsettings.cpp  keyboardsettings.h  powersave.cpp  powersave.h  powersave.ui  sleeputilities.cpp  sleeputilities.h  sleeputils.ui  sysinfo.ui  systeminformation.cpp  systeminformation.h  systemsettings.cpp  systemsettings.h
lib/: CMakeLists.txt  helperactions.cpp  helperactions.h  ktoshibahardware.cpp  ktoshibahardware.h  ktoshibahardware_export.h  ktoshibaprivate_export.h
lib/helper/: CMakeLists.txt  ktoshhelper.cpp  ktoshhelper.h  net.sourceforge.ktoshiba.ktoshhelper.actions  net.sourceforge.ktoshiba.ktoshhelper.xml
po/: .directory  CMakeLists.txt  Makefile.am  es.po  kcm_ktoshibam.pot  kcmktoshiba.pot  ktoshiba.pot  ktoshiba.pot.ignore  maketrans  mergetrans  msg.sh
po/de/: kcm_ktoshibam.po  ktoshiba.po
po/es/: Makefile.am  kcm_ktoshibam.po  kcmktoshiba.po  ktoshiba.po
po/fr/: Makefile.am  kcmktoshiba.po  ktoshiba.po
po/hu/: Makefile.am  kcmktoshiba.po  ktoshiba.po
rules/udev/: 95-toshiba_keymap.rules  95-x205_keymap.rules  99-ktoshiba-input.rules  toshiba-qosmio_x505  toshiba-satellite_x205
src/: CMakeLists.txt  Icons.qrc  Makefile.am  accelthread.cpp  accelthread.h  cmdwidget.ui  cmdwidget.ui.h  dbusOsdService.xml  fnactions.cpp  fnactions.h  fnactionsosd.cpp  fnactionsosd.h  hci.c  hci.h  hddprotectionwidget.ui  helperactions.cpp  helperactions.h  kbdtimeoutwidget.ui  ktosh_helper.cpp  ktosh_keyhandler.cpp  ktoshhelper  ktoshiba.cpp  ktoshiba.desktop  ktoshiba.h  ktoshiba.notifyrc  ktoshiba_debug.cpp  ktoshiba_debug.h  ktoshibadbusinterface.cpp  ktoshibadbusinterface.h  ktoshibadcopinterface.cpp  ktoshibadcopinterface.h  ktoshibahddprotect.cpp  ktoshibahddprotect.h  ktoshibakeyhandler.cpp  ktoshibakeyhandler.h  ktoshibanetlinkevents.cpp  ktoshibanetlinkevents.h  ktoshibaomnibookinterface.cpp  ktoshibaomnibookinterface.h  ktoshibaprocinterface.cpp  (+22 more)
src/helper/: 666net.sourceforge.ktoshiba.ktoshhelper.policy  CMakeLists.txt  ktoshhelper.cpp  ktoshhelper.h  net.sourceforge.ktoshiba.ktoshhelper.actions  net.sourceforge.ktoshiba.ktoshhelper.xml
src/images/: Makefile.am
src/images/actions/: Makefile.am
src/kcm/: CMakeLists.txt  general.ui  hddprotect.ui  kcm_ktoshibam.desktop  keyboard.ui  sleeputils.ui  sysinfo.ui  systemsettings.cpp  systemsettings.h
src/kcmktoshiba/: Makefile.am  bsmwidget.ui  bsmwidget.ui.h  kcmtoshiba_general.ui  kcmtoshiba_general.ui.h  ktoshibam.desktop  main.cpp  main.h
templates/: cpp  h
